--- a/tween-paleoshorelines-inplace.ipynb
+++ b/tween-paleoshorelines-inplace.ipynb
@@ -954,29 +954,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./present_day_paleogeography.gmt\n"
+      "./present_day_paleogeography.gmt\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/lm_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/m_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/i_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/lm_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/m_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/i_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/sm_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "Working on interpolation from 0.00 Ma to 6.00 Ma .....\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<>:26: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:26: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<ipython-input-4-023260e78a67>:26: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if pg_mode is 'mountains':\n"
+      "<ipython-input-2-694d4231bbf0>:170: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  psl_dist_norm = np.divide(distance_to_psl_t1,(distance_to_psl_t1+distance_to_psl_t2))\n"
      ]
     },
     {
-     "ename": "OpenFileForReadingError",
-     "evalue": "Error opening file 'present_day_paleogeography.gmt' for reading",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOpenFileForReadingError\u001b[0m                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-023260e78a67>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mpg_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./present_day_paleogeography.gmt'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m     pg_features = pg.load_paleogeography(pg_file,env_list,\n\u001b[0m\u001b[1;32m     34\u001b[0m                                          single_file=True,env_field='Layer')\n\u001b[1;32m     35\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpg_features\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/workspace/paleogeography/paleogeography.py\u001b[0m in \u001b[0;36mload_paleogeography\u001b[0;34m(pg_dir, env_list, single_file, env_field)\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msingle_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpg_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygplates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFeatureCollection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpg_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mpg_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOpenFileForReadingError\u001b[0m: Error opening file 'present_day_paleogeography.gmt' for reading"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./present_day_paleogeography.gmt\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/m_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/lm_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/m_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/i_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "['../paleogeography/Paleogeography_Matthews2016_410-2Ma_Shapefiles//PresentDay_Paleogeog_Matthews2016_6Ma/sm_fig64_11_2_PresentDay_Paleogeog_Matthews2016_6.00Ma.shp']\n",
+      "Working on interpolation from 0.00 Ma to 6.00 Ma .....\n"
      ]
     }
    ],
@@ -1001,12 +1008,13 @@
     "#pg_mode_list = ['mountains']\n",
     "\n",
     "t1 = 0\n",
-    "t2 = time_list[0]\n",
+    "t2 = 6\n",
+    "#t2 = time_list[0]\n",
     "\n",
     "\n",
     "for pg_mode in pg_mode_list:\n",
     "\n",
-    "    if pg_mode is 'mountains':\n",
+    "    if pg_mode == 'mountains':\n",
     "        env_list = ['m']\n",
     "    else:\n",
     "        env_list = ['lm','m','i']\n",
