--- a/tweened-paleotopography-clean.ipynb
+++ b/tweened-paleotopography-clean.ipynb
@@ -32,7 +32,6 @@
    "source": [
     "import sys\n",
     "sys.path.append('../paleogeography')\n",
-    "sys.path.append('../PlateTectonicTools/')\n",
     "\n",
     "import pygplates\n",
     "import glob, re\n",
@@ -713,12 +712,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(np.arange(6,401+5,5))"
-   ]
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " 'cleanup_topologies',\n",
+       " 'documentation',\n",
+       " 'install_documentation',\n",
+       " 'remove_plate_rotations',\n",
+       " 'resolve_topologies',\n",
+       " 'ridge_spreading_rate',\n",
+       " 'separate_ridge_transform_segments',\n",
+       " 'subduction_convergence',\n",
+       " 'utils',\n",
+       " 'velocity_tools']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
