--- a/tweened-paleotopography-clean.ipynb
+++ b/tweened-paleotopography-clean.ipynb
@@ -201,36 +201,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OpenFileForReadingError",
-     "evalue": "Error opening file 'GatewayMasks.gpml' for reading",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOpenFileForReadingError\u001b[0m                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-0a17f450cf2d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mGW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpygplates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFeatureCollection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GatewayMasks.gpml'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfeature\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mGW\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mtmp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpygplates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPropertyName\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate_gpml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'subcategory'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#value('gpml:subcategory')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOpenFileForReadingError\u001b[0m: Error opening file 'GatewayMasks.gpml' for reading"
-     ]
-    }
-   ],
    "source": [
-    "GW = pygplates.FeatureCollection('GatewayMasks.gpml')\n",
+    "`gdal_translate -a_ullr -180 90 180 -90 test.nc new_test.nc`\n",
     "\n",
-    "for feature in GW:\n",
-    "    tmp = feature.get(pygplates.PropertyName.create_gpml('subcategory'))  #value('gpml:subcategory')\n",
-    "    print(tmp)\n"
+    "`os.system(gmt_cmd+' grdfilter %s -G%s -Fg%0.2f -D4 -Vl' % (\n",
+    "        'gmt_surface_fill_the_gap.nc','gmt_surface_fill_the_gap_filter.nc',1000))\n",
+    "`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
